# mysticeti-spec

./: README.md  dag_evolution.qnt  main.qnt  mysticeti_c.qnt  mysticeti_paper_test.qnt  mysticeti_types.qnt  out.itf.json  watcher.qnt
spells/: basicSpells.qnt  rareSpells.qnt
visualizer/: Cargo.toml  flake.nix
visualizer/.direnv/: flake-profile-1-link
visualizer/src/: main.rs
