[package]
name = "mysticeti-spec"
version = "0.1.0"
edition = "2021"

[dependencies]
itf = "0.2.4"
num-bigint = "0.4.4"
num-traits = "0.2.17"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
ratatui = { version="0.27.0", features = ["palette"] }
crossterm = "0.26"
itertools = "0.13.0"
serde_path_to_error = "0.1"
serde_json = "1.0"
